Correct column alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,29 +119,28 @@ nav {
 .content {
     clear: both;
     display: block;
-    margin-bottom: 3rem;
+/*    margin-bottom: 3rem;*/
 }
 
 #left-panel {
-    clear:both;
-    padding-right: 3rem;
+    padding-right: 1fr;
     float: left;
 }
 
 #right-panel {
-    /*padding-top: 3rem;*/
+    padding-left: 1fr;
     float: left;
 }
 
 #center-panel {
-    padding-left: 2rem;
+    padding-left: 1fr;
     float: left;
 }
 
 
 .left-panel-heading {
     width: 80%;
-    float: right;
+    float: left;
     line-height: 20px;
     margin: 0, 1rem;
     text-align: left;
@@ -158,8 +157,8 @@ nav {
 .center-panel-heading {
     width: 80%;
     line-height: 20px;
-    margin: 0, 1rem;
-    text-align: left;
+    /*margin: 0, 1rem;*/
+    text-align: left; 
 }
 
 /*footer*/
